Removed access keys

--- a/ElectionService/pom.xml
+++ b/ElectionService/pom.xml
@@ -57,6 +57,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.tus</groupId>
+            <artifactId>PartyService</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
