--- a/CloudGateway/src/main/resources/application.yaml
+++ b/CloudGateway/src/main/resources/application.yaml
@@ -1,5 +1,11 @@
 server:
   port: 9090
+  cors:
+    allowed-origins: "*"
+    allowed-methods: "GET, POST, PUT, DELETE"
+    allowed-headers: "*"
+    allow-credentials: false
+    max-age: 3600
 
 spring:
   application:
